<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Inscription">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="135dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_retour"
                android:layout_width="match_parent"
                android:layout_height="67dp"
                android:text="Retour"
                android:textColor="@color/classy_dark"
                app:backgroundTint="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="106dp"
                        app:srcCompat="@drawable/logo" />

                    <TextView
                        android:id="@+id/textView_Title"
                        style="@style/DefaultTitle"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:text="Inscrivez-vous sur GRST Services" />

                    <TextView
                        android:id="@+id/textView_inscription_desc"
                        android:layout_width="match_parent"
                        android:layout_height="84dp"
                        android:fontFamily="@font/kanit"
                        android:text="Créez un compte et découvrez divers services intéressants, connectez-vous avec des freelances et vérifiez facilement sur la plateforme GRST" />

                    <EditText
                        android:id="@+id/text_mail"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:ems="10"
                        android:hint="@string/insert_email"
                        android:inputType="textPersonName"
                        android:textColor="@color/classy_grey"
                        android:textStyle="italic" />

                    <EditText
                        android:id="@+id/text_nom"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:ems="10"
                        android:hint="@string/insert_nom"
                        android:inputType="textPersonName"
                        android:textColor="@color/classy_grey"
                        android:textStyle="italic" />

                    <EditText
                        android:id="@+id/text_prenom"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:ems="10"
                        android:hint="@string/insert_prenom"
                        android:inputType="textPersonName"
                        android:textColor="@color/classy_grey"
                        android:textStyle="italic" />

                    <EditText
                        android:id="@+id/text_pseudo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/insert_pseudo"
                        android:inputType="textPersonName"
                        android:textColor="@color/classy_grey"
                        android:textStyle="italic" />

                    <TextView
                        android:id="@+id/textView_warningPseudo"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:fontFamily="@font/kanit"
                        android:text="Attention, vous ne pourrez pas le changer" />

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="match_parent"
                        android:layout_height="55dp" />

                    <EditText
                        android:id="@+id/editMdp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/insert_mdp"
                        android:inputType="textPassword"
                        android:textStyle="italic" />

                    <TextView
                        android:id="@+id/textView_mdp"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:fontFamily="@font/kanit"
                        android:text="Mot de passe contenant au minimum 7 caractères (majuscules, minuscules et des chiffres)" />

                    <EditText
                        android:id="@+id/editRepetMdp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/repeat_mdp"
                        android:inputType="textPassword"
                        android:textStyle="italic" />

                    <Button
                        android:id="@+id/buttonInscription_page_inscription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="S'inscrire"
                        android:textColor="@color/classy_grey"
                        app:backgroundTint="@color/classy_green" />

                    <TextView
                        android:id="@+id/textView_dejaCompte"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/kanit"
                        android:gravity="center_horizontal"
                        android:text="Déjà inscrit ?" />

                    <Button
                        android:id="@+id/buttonConnexion_page_inscription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_connexion"
                        android:textColor="@color/classy_grey"
                        app:backgroundTint="@color/classy_green" />

                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>