<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="270dp"
                app:srcCompat="@drawable/logo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="375dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:gravity="bottom|center_horizontal"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_connexion"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="330dp"
                    android:layout_height="35dp"
                    android:layout_gravity="bottom|center_horizontal"
                    android:background="@drawable/transparent_bg"
                    android:fontFamily="@font/kanit"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:text="@string/text_connexion"
                    android:textColor="@color/classy_dark"
                    app:backgroundTint="#E6CFCFC4" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:layout_weight="1"
                android:gravity="center|center_horizontal|center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_pas_inscrit"
                    style="@style/DefaultTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal|center_vertical"
                    android:fontFamily="@font/kanit"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:text="@string/text_pas_inscrit"
                    android:textColor="@color/classy_grey"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_inscription"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="330dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center|center_horizontal|center_vertical"
                    android:background="@drawable/transparent_bg"
                    android:fontFamily="@font/kanit"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:text="@string/text_inscription"
                    android:textColor="@color/classy_dark"
                    app:backgroundTint="#E6CFCFC4" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView_ignorer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="7dp"
                android:clickable="true"
                android:fontFamily="@font/kanit"
                android:textColor="@color/classy_grey"
                android:gravity="center|center_horizontal"
                android:text="@string/ignorer" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>